<resources>
    <string name="app_name">MessengerApp</string>

    <string name="sign_up_button_label_text">Not registered?</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sing_out_button_text">SIGN OUT</string>
    <string name="close_button_text">CLOSE</string>

    <string name="update_button_text">UPDATE</string>

    <string name="username_field_hint">Enter your nickname</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="profession_field_hint">What I do</string>

    <string name="search_field_hint">Search</string>

    <string name="avatar_image_description">Avatar image</string>

    <string name="home_page">home page</string>
    <string name="profile_page">profile page</string>
    <string name="update">Update</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sample">sample</string>
    <string name="_5_min">5 min</string>
    <string name="search">Search</string>
    <string name="plus_button_description">+</string>
    <string name="search_icon">search</string>
    <string name="search_background">background</string>
    <string name="lookup_icon_description">lookup</string>
    <string name="send_btn_text">Send</string>
    <string name="message_input_hint">Message</string>
    <string name="chat_username">Username</string>
    <string name="back_icon">back</string>

</resources>