<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/color_background_blue"
            android:minHeight="@dimen/height_input_edittext"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/search_background"
                android:scaleType="center"
                android:src="@drawable/background"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                app:contentInsetStart="10dp"
                app:contentInsetEnd="10dp"
                app:layout_collapseMode="pin">

                <androidx.cardview.widget.CardView
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_edittext"
                    app:cardCornerRadius="@dimen/radius_search_card" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/lookup_icon_description"
                            android:src="@android:drawable/ic_menu_search" />

                        <EditText
                            android:id="@+id/searchEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:background="@null"
                            android:gravity="center_vertical|start"
                            android:hint="@string/search"
                            android:inputType="text"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/users_info"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
            <include layout="@layout/fragment_single_chat" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
